[gd_scene load_steps=30 format=3 uid="uid://cdbt8nsaysi3g"]

[ext_resource type="Script" path="res://opening_scene.gd" id="1_wbu2k"]
[ext_resource type="Script" path="res://RobotBody.gd" id="2_0w4d4"]
[ext_resource type="Texture2D" uid="uid://dcwap6cti0iyj" path="res://Assets/Characters/player_character/closed_eyes.png" id="2_j2d41"]
[ext_resource type="Texture2D" uid="uid://dg8c5cbhye5ps" path="res://Assets/Characters/player_character/open_eyes.png" id="3_c28gm"]
[ext_resource type="Texture2D" uid="uid://rtndfmnkmskf" path="res://Assets/Characters/kid/breath_1.png" id="4_g5rip"]
[ext_resource type="Texture2D" uid="uid://x1pu7jpj4trx" path="res://Assets/Characters/kid/breath_2.png" id="5_l2wjs"]
[ext_resource type="Texture2D" uid="uid://cyfdg6ctjetgy" path="res://Assets/Misc/chain_end.png" id="6_wtfoh"]
[ext_resource type="Texture2D" uid="uid://dae1ltyv2c1jv" path="res://Assets/Misc/chain_left.png" id="7_3da6a"]
[ext_resource type="Texture2D" uid="uid://b06kqy0h7vk16" path="res://Assets/Characters/evil_man/walk_1.png" id="8_hhc01"]
[ext_resource type="Texture2D" uid="uid://i7u0iadeeufx" path="res://Assets/Misc/chain_right.png" id="8_m6ger"]
[ext_resource type="Texture2D" uid="uid://bsojmxtiv0nvb" path="res://Assets/Characters/evil_man/walk_2.png" id="9_i1g03"]
[ext_resource type="Texture2D" uid="uid://b8bhdb8vctfx6" path="res://Assets/Characters/mom/mom_cry_2.png" id="9_wcjih"]
[ext_resource type="Texture2D" uid="uid://blue66jtnx304" path="res://Assets/Characters/mom/mom_cry_1.png" id="10_jkffo"]
[ext_resource type="Texture2D" uid="uid://cj2b1pra51iyt" path="res://Assets/Characters/mom/mom_kick_1.png" id="11_j0b3p"]
[ext_resource type="Texture2D" uid="uid://cqriakftlbtym" path="res://Assets/Characters/mom/mom_kick_2.png" id="12_61ri0"]
[ext_resource type="Texture2D" uid="uid://bnwahncqinnev" path="res://Assets/Characters/mom/mom_kick_3.png" id="13_ab6cs"]
[ext_resource type="Texture2D" uid="uid://bwv6l1vfxee67" path="res://Assets/Portal/portal_large_1.png" id="16_f2454"]
[ext_resource type="Texture2D" uid="uid://xuipbd4pj7gf" path="res://Assets/Portal/portal_large_2.png" id="17_gt54k"]
[ext_resource type="Texture2D" uid="uid://dv6j0xuwdx0og" path="res://Assets/Portal/portal_large_3.png" id="18_5o6mc"]
[ext_resource type="Texture2D" uid="uid://omapehl5m04x" path="res://Assets/Portal/portal_large_4.png" id="19_2rwkp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qp0if"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_f2454")
}, {
"duration": 1.0,
"texture": ExtResource("17_gt54k")
}, {
"duration": 1.0,
"texture": ExtResource("18_5o6mc")
}, {
"duration": 1.0,
"texture": ExtResource("19_2rwkp")
}],
"loop": true,
"name": &"spin",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w0wro"]
height = 44.6666

[sub_resource type="SpriteFrames" id="SpriteFrames_ph1et"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j2d41")
}, {
"duration": 1.0,
"texture": ExtResource("3_c28gm")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_c28gm")
}],
"loop": true,
"name": &"eyes_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j2d41")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvmjv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xb2pb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_l2wjs")
}, {
"duration": 1.0,
"texture": ExtResource("4_g5rip")
}],
"loop": true,
"name": &"crying",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1576u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_wcjih")
}, {
"duration": 1.0,
"texture": ExtResource("10_jkffo")
}],
"loop": true,
"name": &"crying",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_j0b3p")
}, {
"duration": 1.0,
"texture": ExtResource("12_61ri0")
}, {
"duration": 1.0,
"texture": ExtResource("13_ab6cs")
}],
"loop": true,
"name": &"kick",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ypsvf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_hhc01")
}],
"loop": true,
"name": &"stand",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_hhc01")
}, {
"duration": 1.0,
"texture": ExtResource("9_i1g03")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_cayjh"]
resource_name = "opening"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BadGuySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 0.68302),
"update": 0,
"values": [Vector2(4305, 1074), Vector2(3000, 1074)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(16.9, 20),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"set_robot_falling"
}, {
"args": [],
"method": &"end"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BadGuySprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"walk", &"stand"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RobotBody/RobotSprite:sprite_frames")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_ph1et")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RobotBody/RobotSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(8.5, 10.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("KidSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(11.5, 13.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RobotBody/RobotSprite:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(13.8, 15.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"blink", &"eyes_open"]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MomSprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.2, 6.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1000, 1080), Vector2(1000, -150)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("MomSprite:animation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 3.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"crying", &"kick"]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PortalBody/PortalSprite:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(8.5, 10.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_241kr"]
_data = {
"opening": SubResource("Animation_cayjh")
}

[node name="OpeningScene" type="Node2D"]
script = ExtResource("1_wbu2k")

[node name="Background" type="ColorRect" parent="."]
offset_right = 3840.0
offset_bottom = 2160.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="PortalBody" type="RigidBody2D" parent="."]
position = Vector2(1920, 1700)
freeze = true
max_contacts_reported = 5
contact_monitor = true

[node name="PortalSprite" type="AnimatedSprite2D" parent="PortalBody"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_qp0if")
animation = &"spin"
frame = 3
frame_progress = 0.851919

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalBody"]
position = Vector2(0, 200)
rotation = 1.5708
scale = Vector2(15, 15)
shape = SubResource("CapsuleShape2D_w0wro")

[node name="RobotBody" type="RigidBody2D" parent="."]
position = Vector2(1920, 1080)
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("2_0w4d4")

[node name="RobotSprite" type="AnimatedSprite2D" parent="RobotBody"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_ph1et")
animation = &"eyes_open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RobotBody"]
scale = Vector2(18, 18)
shape = SubResource("CircleShape2D_cvmjv")

[node name="KidSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1920, 1080)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_xb2pb")
animation = &"crying"
frame_progress = 0.717232

[node name="ChainEnd" type="Sprite2D" parent="KidSprite"]
texture = ExtResource("6_wtfoh")

[node name="Left1" type="Sprite2D" parent="KidSprite"]
position = Vector2(-32, -32)
texture = ExtResource("7_3da6a")

[node name="Left2" type="Sprite2D" parent="KidSprite"]
position = Vector2(-64, -64)
texture = ExtResource("7_3da6a")

[node name="Left3" type="Sprite2D" parent="KidSprite"]
position = Vector2(-96, -96)
texture = ExtResource("7_3da6a")

[node name="Right1" type="Sprite2D" parent="KidSprite"]
position = Vector2(32, -32)
texture = ExtResource("8_m6ger")

[node name="Right2" type="Sprite2D" parent="KidSprite"]
position = Vector2(64, -64)
texture = ExtResource("8_m6ger")

[node name="Right3" type="Sprite2D" parent="KidSprite"]
position = Vector2(96, -96)
texture = ExtResource("8_m6ger")

[node name="MomSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1000, 1080)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_1576u")
animation = &"crying"

[node name="ChainEnd" type="Sprite2D" parent="MomSprite"]
texture = ExtResource("6_wtfoh")

[node name="Left1" type="Sprite2D" parent="MomSprite"]
position = Vector2(-32, -32)
texture = ExtResource("7_3da6a")

[node name="Left2" type="Sprite2D" parent="MomSprite"]
position = Vector2(-64, -64)
texture = ExtResource("7_3da6a")

[node name="Left3" type="Sprite2D" parent="MomSprite"]
position = Vector2(-96, -96)
texture = ExtResource("7_3da6a")

[node name="Right1" type="Sprite2D" parent="MomSprite"]
position = Vector2(32, -32)
texture = ExtResource("8_m6ger")

[node name="Right2" type="Sprite2D" parent="MomSprite"]
position = Vector2(64, -64)
texture = ExtResource("8_m6ger")

[node name="Right3" type="Sprite2D" parent="MomSprite"]
position = Vector2(96, -96)
texture = ExtResource("8_m6ger")

[node name="BadGuySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(4305, 1074)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_ypsvf")
animation = &"walk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_241kr")
}

[connection signal="body_entered" from="RobotBody" to="." method="_on_robot_body_body_entered"]
